--- a/src/style/Card.css
+++ b/src/style/Card.css
@@ -24,4 +24,11 @@ div>div>ul{
     display: flex;
     flex-direction: column;
     align-items: center;
+    transform: scale(1);
+    transition-duration: 400ms;
+}
+
+.card:hover{
+    cursor: pointer;
+    transform: scale(1.05);
 }
